--- a/AWS/Load_To_AWS_ZS.ipynb
+++ b/AWS/Load_To_AWS_ZS.ipynb
@@ -31,8 +31,8 @@
     "# Create engine and pass mySQL connnection \n",
     "\n",
     "# CSV Files\n",
-    "# historic_csv = \"Resources_ZS/nhl_data_before_this_season.csv\"\n",
-    "# historic_df = pd.read_csv(historic_csv, encoding='UTF-8', low_memory=False)\n",
+    "historic_csv = \"Resources_ZS/nhl_data_before_this_season.csv\"\n",
+    "historic_df = pd.read_csv(historic_csv, encoding='UTF-8', low_memory=False)\n",
     "\n",
     "# current_csv = \"Resources_ZS/.csv\"\n",
     "# current_df = pd.read_csv(current_csv)\n",
@@ -75,14 +75,14 @@
    ],
    "source": [
     "# Dataframe to SQL\n",
-    "# historic_df.to_sql(name='historic_data', if_exists='append', con=conn, chunksize=500, index=False)\n",
+    "historic_df.to_sql(name='historic_data', if_exists='append', con=conn, chunksize=500, index=False)\n",
     "\n",
     "# current_df.to_sql(name='current_data', if_exists='append', con=conn, chunksize=500, index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -530,15 +530,15 @@
        "[14 rows x 37 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# remote_historic_data = pd.read_sql(\"SELECT * FROM historic_data WHERE player IN ('Alex Ovechkin')\", conn)\n",
-    "# print(len(remote_historic_data))\n",
-    "# remote_historic_data "
+    "remote_historic_data = pd.read_sql(\"SELECT * FROM historic_data WHERE player IN ('Alex Ovechkin')\", conn)\n",
+    "print(len(remote_historic_data))\n",
+    "remote_historic_data "
    ]
   },
   {
